# Firmware

./: Cargo.toml  README.md  openocd.cfg  send_velocities.sh  stm32f1x.cfg
.cargo/: config
OpiSoftware/opi_main/: Cargo.toml
OpiSoftware/opi_main/src/: buffered_f232h.rs  main.rs  tinymovr.rs  wheel_conversion.rs
simpleFOC/: README  platformio.ini
simpleFOC/src/: main.cpp
src/: dongle.rs  main.rs  robot.rs
src/robot/: tinymovr.rs
