[package]
name = "MainboardFirmware"
version = "0.0.1"
authors = ["Akhil Veeraghanta <akhil.veeraghanta@outlook.com>"]
edition = "2021"

[features]
robot = []
dongle = []

[dependencies]
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", branch = "master", features = ["rt", "stm32f103", "stm32-usbd", "has-can"] }
embedded-nrf24l01 = { git = "https://github.com/sfunderbots/embedded-nrf24l01.git", branch = "master" }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
nb = "1"
bxcan = "0.7"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-dma = "0.2.0"
embedded-hal = "0.2.7"
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.5.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
ftdi-mpsse = "0.1.1"
ftdi-embedded-hal = "0.15.1"
mcp2515 = "0.2.2"
rppal = "0.17.1"
